(- fix des) Tweak header/button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,12 @@
-.App {
-   text-align: center;
-}
-
-.App-header {
-   background-color: #282c34;
-   min-height: 100vh;
+#flex-wrapper > header {
    display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   font-size: calc(10px + 2vmin);
-   color: white;
+   padding: var(--spacing-xxs);
+   gap: var(--spacing-xxs);
 }
 
-.App-link {
-   color: #61dafb;
-}
-
-button {
-   font-size: calc(10px + 2vmin);
-   margin: 0.1em
+#flex-wrapper > header button {
+   height: auto;
+   padding: var(--spacing-xs) var(--spacing-sm);
+   line-height: normal;
+   font-size: var(--font-sm);
 }
